Fix projects overlapping header on mobile

--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,10 @@ svg {
     max-width: 100%;
   }
 
+  .project:hover {
+    transform: none;
+  }
+
   .project-title span {
     display: block;
   }
